feat: kiosk registering

--- a/apps/kiosk/src/renderer/index.html
+++ b/apps/kiosk/src/renderer/index.html
@@ -10,8 +10,8 @@
     />
   </head>
 
-  <body>
-    <div id="root"></div>
+  <body class="w-full h-full">
+    <div class="w-full h-full" id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
